--- a/project-manager.html
+++ b/project-manager.html
@@ -41,11 +41,11 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/socrata/job/oolDafwg'>Socrata Careers - Partner Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/udacity/jobs/4369208002'>Job Application for Senior Program Manager at Udacity</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://lewisham.referrals.selectminds.com/jobs/creative-enterprise-zone-cez-relationships-project-manager-771'>Creative Enterprise Zone (CEZ) Relationships & Project Manager - Lewisham Jobs Careers</a></h5> 
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999692352027-project-manager-m-f-d-it-solutions'>Eurofins Project Manager (m/f/d) IT Solutions | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999692352027-project-manager-m-f-d-it-solutions'>Eurofins Project Manager (m/f/d) IT Solutions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -104,11 +104,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-project-manager-ophthalmology-us-or-canada-30218'>Sr Project Manager (Ophthalmology- US or Canada) - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-project-manager-ophthalmology-us-or-canada-30218'>Sr Project Manager (Ophthalmology- US or Canada) - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/project-manager-ii-senior-project-manager-general-medicine-europe-30214'>Project Manager II/Senior Project Manager - General Medicine - Europe - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/project-manager-ii-senior-project-manager-general-medicine-europe-30214'>Project Manager II/Senior Project Manager - General Medicine - Europe - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -182,7 +182,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nutanix/job/o2TCafwr'>Nutanix Careers - Technical Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nutanix/job/o2TCafwr'>Nutanix Careers - Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -270,7 +270,7 @@ TFS.</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Project Manager at GovNet Communications.</p>
 <hr/>
-<h5><a href='https://wirecardbrasil.workable.com/jobs/1073080'>Project Manager (m/f/x) - Customer ... - Wirecard Brasil - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecardbrasil.workable.com/jobs/1073080'>Project Manager (m/f/x) - Customer ... - Wirecard Brasil - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Project Manager (m/f/x) - Customer Management at 
 Wirecard Brasil.</p>
@@ -293,7 +293,7 @@ Paris (relocation accepted) at Kapten.</p>
 <p>Jul 11, 2019 ... Technical Project Managers are highly regarded members of the Revenue Cycle 
 Project Office for the Physician Group Practices within Emory Healthcare and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/herjavecgroup/job/oQpAafwJ'>Herjavec Group Careers - Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/herjavecgroup/job/oQpAafwJ'>Herjavec Group Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -309,7 +309,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oZnmafwC&__jvst=ER+-+Employee+Referral&__jvsd=swDiuhwH&__jvsc=Twitter&bid=nFyDTKwY'>Nutanix Careers - Sr. Program Manager - Sales Enablement WEURSSA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oZnmafwC&__jvst=ER+-+Employee+Referral&__jvsd=swDiuhwH&__jvsc=Twitter&bid=nFyDTKwY'>Nutanix Careers - Sr. Program Manager - Sales Enablement WEURSSA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -349,7 +349,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quast.workable.com/j/2247F5FB5A'>Quast Ltd - Jobs: Project Manager - Apply online</a></h5> 
+<h5><a href='https://quast.workable.com/j/2247F5FB5A'>Quast Ltd - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -419,7 +419,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flz/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flz/'>
     Construction Project Manager - Scotland  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -450,7 +450,7 @@ in roofing, waterproofing & restoration with a project portfolio consisting of?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/4azfingssxfwcsdx8pthen8x5e'>Project Manager 2 (16125) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/4azfingssxfwcsdx8pthen8x5e'>Project Manager 2 (16125) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -458,7 +458,7 @@ in roofing, waterproofing & restoration with a project portfolio consisting of?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999692242850-seller-implementation-project-manager'>Tradeshift Seller Implementation Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999692242850-seller-implementation-project-manager'>Tradeshift Seller Implementation Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
