--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -103,7 +103,7 @@ Cover) at Paymentsense.</p>
 <p>5 days ago ... The Business Intelligence Analyst will be responsible for researching, collecting, 
 analyzing and reporting operational and business data from multiple sources.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IKEASoutheastAsia/743999692215165-business-intelligence-architect-ikea-southeast-asia-2-years-contract-'>IKEA Southeast Asia Business Intelligence Architect, IKEA Southeast Asia (2 Years Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/IKEASoutheastAsia/743999692215165-business-intelligence-architect-ikea-southeast-asia-2-years-contract-'>IKEA Southeast Asia Business Intelligence Architect, IKEA Southeast Asia (2 Years Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -213,7 +213,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
+<h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -230,7 +230,7 @@ developing and implementing metrics and reporting to improve our business and
 <p>4 days ago ... Dorilton Capital is looking for a Business Intelligence/Data Warehouse (BI/DW) 
 Solutions Architect to design and build the firm's Data Warehouse and Business?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4209039002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4209039002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -362,7 +362,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://paymentsense-1.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC, Maternity Cover) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paymentsense-1.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC, Maternity Cover) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -448,7 +448,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/netent/jobs/1779104'>Job Application for Business Intelligence Qlik Sense Developer  at NetEnt</a></h5> 
+<h5><a href='https://boards.greenhouse.io/netent/jobs/1779104'>Job Application for Business Intelligence Qlik Sense Developer  at NetEnt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
